初步完善26.1的渲染部分